tests/sumo/tls/NEMA/errors/1_ignore/output.sumo
Loading net-file from 'net.net.xml' ... done (4ms).
Loading additional-files from 'input_additional.add.xml' ... done (0ms).
Loading additional-files from 'input_additional2.add.xml' ... done (1ms).
Loading route-files incrementally from 'input_routes.rou.xml'
Loading done.
Simulation version v1_24_0+0988-90d076c371e started with time: 0.00.
Simulation ended at time: 500.00.
Reason: The final simulation step has been reached.
Performance:
 Duration: 0.06s
 Real time factor: 7812.5
 UPS: 483468.750000
Vehicles:
 Inserted: 422 (Loaded: 423)
 Running: 89
 Waiting: 1
Statistics (avg of 333):
 RouteLength: 351.61
 Speed: 7.64
 Duration: 66.93
 WaitingTime: 30.55
 TimeLoss: 48.37
 DepartDelay: 0.70
